      - depends-on-specific-java-doc-package
      - unneeded-build-dep-on-quilt
      - description-synopsis-starts-with-article
      - needless-dependency-on-jre
      - temporary-debhelper-file
      - compressed-objects.inv
      - unused-build-dependency-on-cdbs
      - python-debug-in-wrong-location
      - debian-watch-contains-dh_make-template

  * checks/*:
    + [NT] Use the new pre-sorted file {index,info} when iterating over files.
  * checks/binaries:
    + [RA] Exclude kfreebsd-kernel-di-{amd64,i386} from the
      embedded-zlib check since it's in the kernel.  (Closes: #593397)
    + [RG] Add swipl to the list of known interpreters.  (Closes: #591316)
  * checks/cruft{,.desc}:
    + [NT] Extended the diff-contains-substvars check to also catch files
      prefixed with a package name.
    + [NT] Corrected the description of diff-contains-$vcs-control-dir.
      It incorrectly assumed that -i worked for native packages.
      (Closes: #609153)
    + [NT] Moved the list of autotools packages into data/cruft/autotools.
    + [NT] Clarified that dpkg-source looks for <package>_<upstreamversion>
      and not <package>_<version> in the description of
      native-package-with-dash-version.  Thanks to Daniel Thomas for the
      report.  (Closes: #594254)
  * checks/debhelper{,.desc}:
    + [NT] Fix dependency check for dh_nativejava, default-jdk has never
      provided dh_nativejava.  (Closes: #606506)
    + [NT] Added check for temporary debhelper files that ought to have
      been removed by dh_clean.  (Closes: #598251)
    + [NT] Added check for unused build dependency on cdbs.  Thanks to
      Jari Aalto for suggesting this.  (Closes: #582769)
  * checks/debian-source-dir:
    + [NT] Added missing import of "Util" perl module.  Thanks to David
      Bremner for the patch.
  * checks/description{,.desc}:
    + [NT] Add a check for synopsis starting with articles.  Thanks to
      Nelson A. de Oliveira for the patch.  (Closes: #603053)