@@ -1,0 +1,1 @@
+python-foo usr/share/pyshared-data/
